@@ -9,6 +9,7 @@ DISTFILES =	.gitignore \
 	config/2gig/ct100.xml \
 	config/2gig/ct101.xml \
 	config/2gig/ct30.xml \
+	config/2gig/ct32.xml \
 	config/2gig/ct50e.xml \
 	config/2gig/ct80.xml \
 	config/BeNext/1poleswitch.xml \
