@@ -209,6 +209,7 @@ Version 1.5
  - Pull Request #1365 Added Vision ZL7431 - Single Relay Switch from belyalov (Nechry)
  - Add Everspring Outdoor Motion Detector SP816 (Nechry)
  - Add Coolcam SOS Remote Key-Fob RC01Z (Nechry)
+ - Add 2GIG Technologies CT32 Thermostat (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
